--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,20 @@
 spring:
+    profiles:
+        active: native
     cloud:
         config:
             server:
-                git:
-                    uri: git@github.com:sfg-beer-works/sfg-config-repo.git
-#                    skipSslValidation: true
-#                    search-paths: beer*
+                native:
+                    search-locations: classpath:/config/{application},classpath:/config/{application}-{profile},
 server:
     port: 8888
 logging:
     level:
         org.springframework.cloud: debug
-#        org.eclipse.jgit: debug
-        org.springframework.web: debug
+       # org.springframework.web: debug
 management:
     endpoint:
         health:
             show-details: always
         mappings:
             enabled: true
-#        org.springframework: debug
