--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.github.sfg-beer-works</groupId>
     <artifactId>sfg-brewery-config</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <name>sfg-brewery-config</name>
     <description>SFG Brewery Config</description>
 
@@ -176,7 +176,7 @@
         <connection>scm:git:git@github.com:sfg-beer-works/sfg-brewery-config.git</connection>
         <developerConnection>scm:git:git@github.com:sfg-beer-works/sfg-brewery-config.git</developerConnection>
         <url>https://github.com/sfg-beer-works/sfg-brewery-config</url>
-        <tag>sfg-brewery-config-1.0.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
