[maven-release-plugin] prepare release sfg-brewery-config-1.0.55

--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.3.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.github.bg-beer-works</groupId>
     <artifactId>sfg-brewery-config</artifactId>
-    <version>1.0.55-SNAPSHOT</version>
+    <version>1.0.55</version>
     <name>sfg-brewery-config</name>
     <description>SFG Brewery Config</description>
 
@@ -196,7 +195,7 @@
         <connection>scm:git:git@github.com:guvenbe/sfg-brewery-eureka.git</connection>
         <developerConnection>scm:git:git@github.com:guvenbe/sfg-brewery-eureka.git</developerConnection>
         <url>https://github.com/guvenbe/sfg-brewery-eureka</url>
-        <tag>HEAD</tag>
+        <tag>sfg-brewery-config-1.0.55</tag>
     </scm>
 
     <distributionManagement>
