--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.github.bg-beer-works</groupId>
     <artifactId>sfg-brewery-config</artifactId>
-    <version>1.0.57-SNAPSHOT</version>
+    <version>1.0.57</version>
     <name>sfg-brewery-config</name>
     <description>SFG Brewery Config</description>
 
@@ -195,7 +195,7 @@
         <connection>scm:git:git@github.com:guvenbe/sfg-brewery-eureka.git</connection>
         <developerConnection>scm:git:git@github.com:guvenbe/sfg-brewery-eureka.git</developerConnection>
         <url>https://github.com/guvenbe/sfg-brewery-eureka</url>
-        <tag>sfg-brewery-config-1.0.55</tag>
+        <tag>sfg-brewery-config-1.0.57</tag>
     </scm>
 
     <distributionManagement>
