--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.github.bg-beer-works</groupId>
     <artifactId>sfg-brewery-config</artifactId>
-    <version>1.0.57</version>
+    <version>1.0.58-SNAPSHOT</version>
     <name>sfg-brewery-config</name>
     <description>SFG Brewery Config</description>
 
